--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </div>
   <canvas id="hidden" hidden></canvas>
   <canvas id="hidden2" hidden></canvas>
-  <a id="download" hidden></a>
+  <a id="download" target="_blank" hidden></a>
   <script src="sketch.js"></script>
 </body>
 
